--- a/app/src/main/res/layout/female_layout.xml
+++ b/app/src/main/res/layout/female_layout.xml
@@ -47,6 +47,7 @@
 
     <Button
         android:id="@+id/bottone"
+        android:backgroundTint="@color/purple_200"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
